clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/struct_has_own_struct_type_as_field/struct_has_own_struct_type_as_field.cbs
// RUN: %clang_cc1 -verify %s

owned struct G;
owned struct G {
    public:
        G* g;
};

void use_G_mut(G * borrow g);
void use_G_const(const G * borrow g);

void test1(G g1) {
    G g = { .g = &g1 };
    G *borrow p1 = &mut g;
    const G *borrow p2 = &const g;     
    G *borrow p3 = &mut *g.g;
    const G *borrow p4 = &const *g.g;
    G *borrow p5 = &mut *g.g->g;  // expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    const G *borrow p6 = &const *g.g->g;  // expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    use_G_mut(p1);  // expected-error {{There should be at most one mutable borrow targeting to 'g' at the same time}}
    use_G_const(p2);  // expected-error {{There should be at most one mutable borrow targeting to 'g' at the same time}}
    use_G_mut(p3);      // expected-error {{There should be at most one mutable borrow targeting to 'g.g.g' at the same time}}
    use_G_const(p4);// expected-error {{There should be at most one mutable borrow targeting to 'g.g.g' at the same time}}
    use_G_mut(p5);   // expected-error {{There should be at most one mutable borrow targeting to 'g.g.g' at the same time}}
    use_G_const(p6);   
}

void test2(G g1) {
    G g = { .g = &g1 };
    G *borrow p1 = &mut g;  
    G *borrow p2 = &mut *g.g;
    G *borrow p3 = &mut *g.g->g;  // expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    use_G_mut(p1);  // expected-error {{There should be at most one mutable borrow targeting to 'g' at the same time}}
    use_G_mut(p2);      // expected-error {{There should be at most one mutable borrow targeting to 'g.g.g' at the same time}}
    use_G_mut(p3);
}

owned struct K;
owned struct S {
    public:
        K* k;
};
owned struct K {
    public:
        S* s;
};

void use_S_mut(S * borrow s);
void use_S_const(const S * borrow s);
void use_K_mut(K * borrow k);
void use_K_const(const K * borrow k);

void test3(S s1) {
    K k = { .s = &s1 };
    K *borrow p1 = &mut k;
    const K *borrow p2 = &const k;
    S *borrow p3 = &mut *k.s;
    const S *borrow p4 = &const *k.s;
    K *borrow p5 = &mut *k.s->k;// expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    const K *borrow p6 = &const *k.s->k;// expected-note {{previous borrow is here}} expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    use_K_mut(p1);   // expected-error {{There should be at most one mutable borrow targeting to 'k' at the same time}}
    use_K_const(p2);// expected-error {{There should be at most one mutable borrow targeting to 'k' at the same time}}
    use_S_mut(p3);  // expected-error {{There should be at most one mutable borrow targeting to 'k.s.k' at the same time}}
    use_S_const(p4);// expected-error {{There should be at most one mutable borrow targeting to 'k.s.k' at the same time}}
    use_K_mut(p5);  // expected-error {{There should be at most one mutable borrow targeting to 'k.s.k' at the same time}}
    use_K_const(p6);   
}

void test4(S s1) {
    K k = { .s = &s1 };
    K *borrow p1 = &mut k;
    S *borrow p2 = &mut *k.s;
    K *borrow p3 = &mut *k.s->k;// expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    use_K_mut(p1);   // expected-error {{There should be at most one mutable borrow targeting to 'k' at the same time}}
    use_S_mut(p2);  // expected-error {{There should be at most one mutable borrow targeting to 'k.s.k' at the same time}}
    use_K_mut(p3);
}